<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="354dp"
        android:layout_height="293dp"
        android:src="@drawable/travel_mate_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />
    <TextView
        android:id="@+id/tv_singi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_tv"
        android:textColor="@color/white"
        android:textSize="@dimen/signup_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.95"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/email_et_width"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="@dimen/stroke_width"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:placeholderText="@string/email_et_helper_text"
        app:placeholderTextAppearance="@style/WhiteHelperTextTheme"
        app:placeholderTextColor="@color/light_grey"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/light_grey"
        app:layout_constraintVertical_bias="0">
        <EditText
            android:id="@+id/login_email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="@dimen/text_padding_start"
            android:textColor="@color/white"
            android:textSize="@dimen/email_et_text_size"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/password_et_width"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/stroke_width"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:placeholderText="@string/password_helper_text"
        app:placeholderTextAppearance="@style/WhiteHelperTextTheme"
        app:placeholderTextColor="@color/light_grey"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/light_grey"
        app:layout_constraintVertical_bias="0.05">
        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/text_padding_start"
            android:textColor="@color/white"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="@dimen/round_button_width"
        android:layout_height="@dimen/round_button_height"
        android:background="@drawable/rounded_button"
        android:text="@string/login_text"
        android:textStyle="bold"
        android:textSize="@dimen/textsize"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.1" />
    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.1"/>
    <TextView
        android:id="@+id/forgotpassword_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tv"
        app:layout_constraintVertical_bias="0.05"/>

</androidx.constraintlayout.widget.ConstraintLayout>