<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/travel_mate_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintVertical_bias="0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_tv"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"
            app:layout_constraintHorizontal_bias="0.95"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/user_name_et_width"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="@dimen/stroke_width"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/user_name_placeholder_text"
            app:placeholderTextAppearance="@style/WhiteHelperTextTheme"
            app:placeholderTextColor="@color/light_grey"
            app:startIconDrawable="@drawable/ic_person_outline"
            app:startIconTint="@color/light_grey"
            app:layout_constraintVertical_bias="0.43">
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_start"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_username"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/email_et_width"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="@dimen/stroke_width"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:placeholderText="@string/email_place_holder"
            app:placeholderTextAppearance="@style/WhiteHelperTextTheme"
            app:placeholderTextColor="@color/light_grey"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/light_grey"
            app:layout_constraintVertical_bias="0.035">
            <EditText
                android:id="@+id/register_email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_start"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_email_et"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/password_et_width"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="@dimen/stroke_width"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:placeholderText="@string/password_place_holder"
            app:placeholderTextAppearance="@style/WhiteHelperTextTheme"
            app:placeholderTextColor="@color/light_grey"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/light_grey"
            app:layout_constraintVertical_bias="0.05">
            <EditText
                android:id="@+id/register_password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_start"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/reenter_password_width"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="@dimen/stroke_width"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:placeholderText="@string/password_place_holder_text"
            app:placeholderTextAppearance="@style/WhiteHelperTextTheme"
            app:placeholderTextColor="@color/light_grey"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/light_grey"
            app:layout_constraintVertical_bias="0.05">
            <EditText
                android:id="@+id/et_reenter_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Re-enter  Password"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="30dp"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_button"
            android:text="SIGN UP"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintVertical_bias="0.1" />
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_a_member_login_here"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintVertical_bias="0.1"/>

</androidx.constraintlayout.widget.ConstraintLayout>